js for adding buttons when user input and submit

--- a/index.html
+++ b/index.html
@@ -47,12 +47,7 @@
         </div>
 
         <form id="search-form">
-          <input
-            type="text"
-            id="userInput"
-            value=""
-            placeholder="TYPE ANY CITY HERE"
-          />
+          <input type="text" id="userInput" placeholder="TYPE ANY CITY HERE" />
           <input id="search" type="submit" value="GIF IT and MOVIE IT!" />
         </form>
       </div>
