--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap"
       rel="stylesheet"
     />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
     <title>GifTastic</title>
   </head>
   <body>
@@ -55,12 +55,7 @@
     <div class="container-fluid" id="button-list"></div>
     <div class="panel m-auto" id="content">
       <div class="resultPanel">
-        <div class="giphy">
-          <img
-            src="https://media.giphy.com/media/l3mZcxZKIQemTeT9S/giphy.gif"
-            alt=""
-          />
-        </div>
+        <div class="giphy"></div>
         <div class="movie">
           <p class="movieDetail">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
@@ -71,18 +66,13 @@
         </div>
       </div>
     </div>
-
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="../GifTastic/javascript/app.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+    <script type="text/javascript"></script>
+
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
