completed gif state change upon clicks, enabled API for both Giphy and imdb

--- a/index.html
+++ b/index.html
@@ -55,15 +55,8 @@
     <div class="container-fluid" id="button-list"></div>
     <div class="panel m-auto" id="content">
       <div class="resultPanel">
-        <div class="giphy"></div>
-        <div class="movie">
-          <p class="movieDetail">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
-            veritatis eius rem, laborum itaque explicabo facere. Eveniet
-            possimus quia tenetur blanditiis culpa, alias laudantium error
-            suscipit cumque eligendi mollitia repellat.
-          </p>
-        </div>
+        <div class="giphy celarfix"></div>
+        <div class="movie"></div>
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
