changed theme color to look more modern

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     >
       <div class="header-row panel" id="margin-row">
         <div class="text-center" id="name">
-          <h1 class="text-dark">
+          <h1 class="text-warning">
             GifTastic
             <span class="badge bg-secondary mt-2" style="color:white"
               >Tian Qin</span
