deleted console.log commands on page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <form id="search-form">
-          <input type="text" id="userInput" placeholder="TYPE ANY CITY HERE" />
+          <input type="text" id="userInput" placeholder="TYPE ANY WHERE" />
           <input id="search" type="submit" value="GIF IT and MOVIE IT!" />
         </form>
       </div>
